# python-showcase

./: .gitignore  pyproject.toml
slides/: slides.md
src/: showcase.ipynb
