[tool.poetry]
name = "python-showcase"
version = "0.1.0"
description = ""
authors = ["James Collier <james.collier@vib.be>"]
readme = "README.md"
packages = [{include = "python_showcase"}]

[tool.poetry.dependencies]
python = "^3.10"
biopython = "1.79"
nglview = "^3.0.3"
ipywidgets = "<8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
black = "^22.10.0"
pylint = "^2.15.7"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
